--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ header {
     }
     header p {
         margin: 0 0.75rem 2rem 0.75rem;
+        font-size: 13px;
     }
     .head-bottom-link {
         text-decoration: none;
@@ -77,8 +78,90 @@ header {
 .cards img {
     width: 100%;
 }
-.cards 
+.main-head {
+    margin: 3rem 0 1rem 0;
+    font-weight: 700;
+}
+.main-content {
+    font-size: 13px;
+    color: gray;
+}
+.community-card {
+    border-radius: 0.75rem;
+    box-shadow: 0 0 0.1rem rgb(238, 194, 167);
+    padding: 3rem 1rem;
+    position: absolute;
+    left: 1rem;
+    right: 1rem;
+    margin-top: 5rem;
+    background-color: #FFFFFF;
 
+}
+.community-card p {
+    font-weight: 700;
+    margin-bottom: 2rem;
+}
+.community-card a {
+    text-decoration: none;
+    color: #FFFFFF;
+    background-color: #FE52C0;
+    padding: 0.5rem 3rem;
+    border-radius: 2rem;
+    box-shadow: 0 0.15rem 0.75rem gray;
+}
+/* Footer */
+footer {
+    background-color: #00252E;
+    color: #FFFFFF;
+    padding: 7rem 1rem 3rem 1rem;
+    margin-top: 14rem;
+    text-align: left;
+}
+.footer-logo {
+    margin: 1rem 0 1rem 0;
+    width: 8rem;
+}
+.footer-contact {
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 1rem;
+    margin-bottom: 3rem;
+}
+.footer-contact {
+    font-size: 13px;
+}
+.footer-links {
+    display: grid;
+    gap: 1rem;
+    margin-bottom: 2rem;
+}
+.footer-links a {
+    text-decoration: none;
+    color: #FFFFFF;
+}
+.footer-social {
+   display: flex;
+   gap: 0.75rem;
+   justify-content: center;
+}
+.social-img {
+    width: 1.75rem;
+    border: 0.1rem solid #FFFFFF;
+    border-radius: 1rem;
+    padding: 0.25rem;
+}
+.footer-copyright{
+    display: flex;
+    justify-content: center;
+    margin-top: 1.5rem;
+    gap: 0.25rem;
+}
+.copyright-logo {
+    width: 0.75rem;
+}
+footer p {
+    font-size: 10px;
+}
 
 
 }
