finish desktop design

--- a/style.css
+++ b/style.css
@@ -163,5 +163,172 @@ footer p {
     font-size: 10px;
 }
 
+}
+
+@media screen and ( min-width: 769px) {
+     /* Header */
+     header {
+        padding: 2rem;
+        background-image: url(images/bg-hero-desktop.svg);
+        background-size: cover;
+    }
+    .header {
+        display: flex;
+        justify-content: space-between;
+    }
+    .head-logo {
+        width: 7rem;
+        height: 1.25rem;
+    }
+    .head-top-link {
+        text-decoration: none;
+        background-color: #FFFFFF;
+        color: black;
+        padding: 0.25rem 1rem;
+        border-radius: 1rem;
+        box-shadow: 0 0 0.15rem gray;
+    }
+    .header-content {
+        text-align: left;
+        margin-top: 2rem;
+        display: flex;
+        gap: 2rem;
+    }
+    .header-content-card {
+        margin-top: 3rem;
+    }
+    .head-address {
+        font-size: 2.25rem;
+    }
+    header p {
+        margin: 1.5rem 0;
+        font-size: 13px;
+    }
+    .head-bottom-link {
+        text-decoration: none;
+        color: #FFFFFF;
+        background-color: #FE52C0;
+        padding: 0.5rem 2rem;
+        border-radius: 2rem;
+    }
+    .mockups-img {
+        width: 60%;
+    }
+    /* Main */
+    main {
+        padding: 0 2rem;
+    }
+    .cards {
+        padding: 3rem;
+        margin: 2rem 0;
+        border-radius: 0.75rem;
+        box-shadow: 0 0 0.1rem rgb(238, 194, 167);
+        text-align: left;
+    }
+    .card-one {
+        display: flex;
+        flex-direction: row-reverse;
+        gap: 3rem;
+    }
+    .card-two {
+        display: flex;
+        justify-content: space-between;
+        gap: 3rem;
+    }
+    .card-there {
+        display: flex;
+        flex-direction: row-reverse;
+        gap: 3rem;
+    }
+    .cards img {
+        width: 40%;
+    }
+
+    .main-head {
+        margin: 3rem 0 1rem 0;
+        font-weight: 700;
+    }
+    .main-content {
+        font-size: 13px;
+        color: gray;
+        width: 75%;
+    }
+    .community-card {
+        border-radius: 0.75rem;
+        box-shadow: 0 0 0.1rem rgb(238, 194, 167);
+        padding: 3rem 1rem;
+        position: absolute;
+        left: 20%;
+        right: 20%;
+        margin-top: 5rem;
+        background-color: #FFFFFF;
+
+    }
+    .community-card p {
+        font-weight: 700;
+        margin-bottom: 2rem;
+    }
+    .community-card a {
+        text-decoration: none;
+        color: #FFFFFF;
+        background-color: #FE52C0;
+        padding: 0.5rem 3rem;
+        border-radius: 2rem;
+        box-shadow: 0 0.15rem 0.75rem gray;
+    }
+    /* Footer */
+    footer {
+        background-color: #00252E;
+        color: #FFFFFF;
+        padding: 7rem 1rem 3rem 1rem;
+        margin-top: 14rem;
+        text-align: left;
+    }
+    .footer-logo {
+        margin: 1rem 0 1rem 0;
+        width: 8rem;
+    }
+    .footer-grid {
+        display: grid;
+        grid-template-columns: auto auto auto;
+        margin-bottom: 2rem;
+    }
+    .footer-contact {
+        display: grid;
+        grid-template-columns: auto auto;
+        gap: 1rem;
+        font-size: 16px;
+    }
+    .footer-links {
+        display: grid;
+        grid-template-columns: auto auto;
+        gap: 1rem;        
+    }
+    .footer-links a {
+        text-decoration: none;
+        color: #FFFFFF;
+    }
+    .footer-social {
+        display: flex;
+        gap: 0.75rem;
+    }
+    .social-img {
+        width: 1.75rem;
+        border: 0.1rem solid #FFFFFF;
+        border-radius: 1rem;
+        padding: 0.25rem;
+    }
+    .footer-copyright{
+        display: flex;
+        justify-content: flex-end;
+        margin: 0 2rem;
+        gap: 0.25rem;
+    }
+    .copyright-logo {
+        width: 0.75rem;
+    }
+    footer p {
+        font-size: 10px;
+    }
 
 }
